# tauri-chess

./: .eslintrc.js  .gitignore  .prettierrc.js  README.md  eslint.config.js  get-Nodejs.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-android.yml  build.yaml  build.yml  release.yaml
img/: tauri-chess-android.webm
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: engine.rs
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs  utils.rs
src-tauri/src/chess/: api.rs  board.rs  data.rs  engine.rs  mod.rs  moves.rs  pieces.rs  types.rs  unit_tests.rs  utils.rs
src/components/Elements/: index.ts
src/components/Elements/button/: button.tsx
src/components/Elements/button/examples/: RoundedButton.tsx  SizedButton.tsx  animateButton.tsx  defaultButton.tsx  disabledButton.tsx  outlineButton.tsx
src/components/Elements/charts/: ResponsiveLine.tsx
src/components/Elements/drawer/: drawer.tsx
src/components/Elements/drawer/examples/: bottom.tsx  left.tsx  right.tsx  simple.tsx  top.tsx
src/components/Elements/hamburger-menu/: hamburgerMenu.tsx
src/components/Elements/hamburger-menu/examples/: variantOne.tsx  variantThree.tsx  variantTwo.tsx
src/components/Elements/icon/: icon.tsx
src/components/Elements/modal/: modal.tsx
src/components/Elements/modal/examples/: animation.tsx  default.tsx  extraLarge.tsx  large.tsx  notClosedOutside.tsx
src/components/Elements/navbar/: navbar.tsx
src/components/Elements/navbar/examples/: variantOne.tsx  variantThree.tsx  variantTwo.tsx
src/components/Elements/sidenav/: sidenav.tsx
src/components/Elements/sidenav/examples/: left.tsx  notClosedOutside.tsx  right.tsx
src/components/Features/Chessboard/: Board.tsx  BoardSquare.tsx  CustomDragLayer.tsx  Notation.tsx  PhantomPiece.ts  Piece.tsx  Row.tsx  SparePieces.tsx  Square.tsx  helpers.ts  index.tsx  readme.md  types.ts
src/components/Features/Chessboard/svg/: whiteKing.tsx
src/components/Features/Chessboard/svg/chesspieces/: standard.tsx
src/components/Features/chess/: index.ts  index.tsx  promotions.tsx  types.ts
src/components/Layout/: Layout.tsx  Logo.tsx  alert.tsx
src/components/Layout/Footer/: Copywrite.tsx  Footer.tsx
src/components/Layout/Header/: Header.tsx
src/components/Layout/Sidebar/: items.tsx  sideNavbar.tsx
src/components/Layout/helpers/: context.tsx  overlay.tsx
src/hooks/: index.ts  useEventListener.ts  useOnClickOutside.ts  useScrollDirection.ts  useToggle.ts
src/pages/: AboutPage.tsx  HomePage.tsx  SummaryPage.tsx  TestPage.tsx  index.ts
src/routes/: index.tsx
src/services/: notifications.ts
src/style/: global.scss  tailwind.css
src/types/: chessboard.ts  index.ts
src/utils/: index.ts
