[package]
name = "tauri-chess"
version = "1.10.0"
description = "A Tauri App for playing chess"
authors = ["James Sizeland"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^1.5.1", features = [] }

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = ["updater"] }
rand = { version = "0.8.5" }
anyhow = "1.0.80"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
