[package]
name = "tauri-chess"
version = "2.1.0"
description = "A Tauri App for playing chess"
authors = ["James Sizeland"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_chess_lib"
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = [] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
rand = { version = "0.8.5" }
anyhow = "^1.0.80"

# Tauri Plugins
############################################
tauri-plugin-shell = "^2.0.0"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
